--- a/apps/web/.env.local.example
+++ b/apps/web/.env.local.example
@@ -31,3 +31,11 @@ NEXT_PUBLIC_ENABLE_OFFLINE_MODE=false
 # Development
 NODE_ENV=development
 NEXT_PUBLIC_APP_ENV=development
+
+# SMTP Email (for forgot/reset password)
+SMTP_HOST=smtp.your-provider.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your-smtp-user
+SMTP_PASS=your-smtp-pass
+SMTP_FROM="Calisthenics Platform <no-reply@your-domain.com>"
