--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,79 +28,80 @@
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "compression": "^1.7.4",
-    "morgan": "^1.10.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "express-rate-limit": "^7.1.5",
-    "rate-limit-redis": "^4.2.0",
-    "redis": "^4.6.12",
-    "winston": "^3.11.0",
-    "winston-daily-rotate-file": "^4.7.1",
-    "nodemailer": "^6.9.7",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.33.1",
-    "cloudinary": "^1.41.3",
-    "zod": "^3.22.4",
-    "express-validator": "^7.0.1",
-    "cookie-parser": "^1.4.6",
-    "express-session": "^1.17.3",
-    "connect-redis": "^7.1.0",
-    "dotenv": "^16.3.1",
-    "joi": "^17.11.0",
-    "uuid": "^9.0.1",
-    "slugify": "^1.6.6",
-    "moment": "^2.29.4",
-    "lodash": "^4.17.21",
     "axios": "^1.6.2",
-    "stripe": "^14.9.0",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.3",
+    "compression": "^1.7.4",
+    "connect-redis": "^7.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "date-fns": "^3.0.6",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.1.5",
+    "express-session": "^1.17.3",
+    "express-slow-down": "^2.0.1",
+    "express-validator": "^7.0.1",
     "google-auth-library": "^9.4.1",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
+    "ioredis": "^5.8.2",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
-    "express-async-handler": "^1.2.0",
-    "express-mongo-sanitize": "^2.2.0",
-    "xss": "^1.0.14",
-    "hpp": "^0.2.3",
-    "express-slow-down": "^2.0.1",
+    "rate-limit-redis": "^4.2.0",
+    "redis": "^4.6.12",
+    "sharp": "^0.33.1",
+    "slugify": "^1.6.6",
     "socket.io": "^4.7.4",
-    "date-fns": "^3.0.6"
+    "stripe": "^14.9.0",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1",
+    "xss": "^1.0.14",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.4",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/compression": "^1.7.5",
-    "@types/morgan": "^1.9.9",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/nodemailer": "^6.4.14",
-    "@types/multer": "^1.4.11",
+    "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
-    "@types/uuid": "^9.0.7",
+    "@types/hpp": "^0.2.5",
+    "@types/jest": "^29.5.8",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.202",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.4",
+    "@types/nodemailer": "^6.4.14",
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth20": "^2.0.14",
     "@types/passport-jwt": "^3.0.13",
-    "@types/hpp": "^0.2.5",
-    "@types/jest": "^29.5.8",
     "@types/supertest": "^2.0.16",
-    "typescript": "^5.3.3",
-    "tsx": "^4.6.2",
-    "prisma": "^5.7.1",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "supertest": "^6.3.3",
-    "eslint": "^8.55.0",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
+    "eslint": "^8.55.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "prettier": "^3.1.0",
+    "prisma": "^5.7.1",
     "rimraf": "^5.0.5",
-    "nodemon": "^3.0.2"
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "tsx": "^4.6.2",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0",
